Tratando erros e formando cash

--- a/cursos/templates/cursos/pagina_inicial.html
+++ b/cursos/templates/cursos/pagina_inicial.html
@@ -15,6 +15,9 @@
   <p>
     <a href="{% url 'cursos.listar.tudo' %}">Ver cursos</a>
   </p>
+  <p>
+    <a href="{% url 'cursos.form' %}">Formulário</a>
+  </p>
 
   <p>
     <a href="/admin/">Acessar Admin</a>
